added saving blocks that get broken